fix: add height specifiers to background gradients, fix overlapping/overflowing cards

--- a/src/components/background/grids.module.css
+++ b/src/components/background/grids.module.css
@@ -1,9 +1,6 @@
 .layout {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    inset: 0;
 
     --cell-color: rgba(204, 204, 204, 0.025);
     background:
